05-k8s-addons/15-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    app.kubernetes.io/part-of: neuroplan
